Update z-index values to avoid banner from overlapping menus

--- a/src/css/globals/vars.css
+++ b/src/css/globals/vars.css
@@ -64,7 +64,7 @@
   --z-gdpr: 20;
   --z-modal-header: 16;
   --z-modal: 15;
-  --z-nav-mobile: 14;
+  --z-nav-mobile: 1000;
   --z-backdrop: 13;
   --z-header: 12; /* marketing header */
   --z-nav: 11;
